--- a/src/views/animals/animalAdd.ejs
+++ b/src/views/animals/animalAdd.ejs
@@ -1,56 +1,88 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-  <%- include('partials/head') %>
+<%- include('../partials/head.admin.ejs') %>
 
-  <body class="container">
-    <%- include('partials/header') %>
+  <body>
+    <%- include('../partials/header.admin.ejs') %>
 
-    <h1>Agregar Nuevo Animal</h1>
-    <form action="/animals/add" method="POST" enctype="multipart/form-data">
-      <!-- Nombre del Animal -->
-      <div class="form-group">
-        <label for="name">Nombre del Animal</label>
-        <input type="text" class="form-control" id="name" name="name" required>
+      <div class="container">
+        <h1 class="fs-3">Nuevo ingreso</h1>
+        <form action="/animals/create" method="POST" class="row" enctype="multipart/form-data">
+          <!-- Imagen -->
+          <div class="form-group mb-3 col-12 col-md-4">
+            <img src="/images/default.png" alt="Imagen del Animal" class="img-fluid" id="image-prev">
+            <input type="file" hidden class="form-control-file" id="image" name="image" accept="image/*" onchange="showPrev(this.files[0])">
+          </div>
+          <div class="col-12 col-md-8">
+            <div class="row">
+              <div class="form-group mb-3 col-12 ">
+                <label for="name">Nombre</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+              </div>
+              <!-- Descripción -->
+              <div class="form-group mb-3 col-12 ">
+                <label for="description">Descripción</label>
+                <textarea class="form-control" id="description" style="resize: none;" name="description" rows="4"
+                  required></textarea>
+              </div>
+  
+              <!-- Categoría -->
+              <div class="form-group mb-3 col-12  col-md-6">
+                <label for="specieId">Especie</label>
+                <select class="form-control" id="specieId" name="specieId" required>
+                  <option value="" hidden selected>Seleccione...</option>
+                  <% species.forEach(specie=> { %>
+                    <option value="<%= specie.id %>"><%= specie.name %>
+                    </option>
+                    <% }) %>
+                </select>
+              </div>
+  
+              <!-- Tamaño -->
+              <div class="form-group mb-3 col-12 col-md-6 ">
+                <label for="age">Edad</label>
+                <input type="text" class="form-control" id="age" name="age"  required>
+              </div>
+  
+              <div class="form-group mb-3 col-12 col-md-6 ">
+                <label for="sex">Sexo</label>
+                <select class="form-control" id="sex" name="sex" required>
+                  <option value="" hidden selected>Seleccione...</option>
+                  <option value="Hembra">Hembra </option>
+                  <option value="Macho">Macho </option>
+                </select>
+              </div>
+              <div class="form-group mb-3 col-12 col-md-6">
+                <label for="cityId">Zona</label>
+                <select class="form-control" id="cityId" name="cityId" required>
+                  <option value="" hidden selected>Seleccione...</option>
+                  <% cities.forEach(city=> { %>
+                    <option value="<%= city.id %>"><%= city.name %> (<%=
+                          city.province %> )</option>
+                    <% }) %>
+                </select>
+              </div>
+              <div class="col-12 mt-3">
+                <div class="d-flex justify-content-end gap-2">
+                  <label class="btn btn-secondary" for="image">Subir imagen</label>
+                  <button type="submit" class="btn btn-primary">Agregar Animal</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
 
-      <!-- Descripción -->
-      <div class="form-group">
-        <label for="description">Descripción</label>
-        <textarea class="form-control" id="description" name="description" rows="4" required></textarea>
-      </div>
-
-      <!-- Imagen -->
-      <div class="form-group">
-        <label for="image">Imagen</label>
-        <input type="file" class="form-control-file" id="image" name="image" accept="image/*" required>
-      </div>
-
-      <!-- Categoría -->
-      <div class="form-group">
-        <label for="category">Categoría</label>
-        <select class="form-control" id="category" name="category" required>
-          <option value="perro">Perro</option>
-          <option value="gato">Gato</option>
-          <option value="zona">Zona</option>
-        </select>
-      </div>
-
-      <!-- Tamaño -->
-      <div class="form-group">
-        <label for="size">Tamaño</label>
-        <input type="text" class="form-control" id="size" name="size" placeholder="Ej. Grande, Pequeño, Mediano" required>
-      </div>
-
-      <!-- Botón de Enviar -->
-      <button type="submit" class="btn btn-primary">Agregar Animal</button>
-    </form>
-
-    <%- include('partials/footer') %>
-
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script>
+  function showPrev(file) {
+    let reader = new FileReader();
+    reader.onload = function (e) {
+      document.getElementById("image-prev").src = e.target.result;
+    };
+    reader.readAsDataURL(file);
+  }
+</script>
   </body>
+
 </html>
