--- a/src/views/animals/animalEdit.ejs
+++ b/src/views/animals/animalEdit.ejs
@@ -1,57 +1,85 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-  <%- include('partials/head') %>
+<%- include('../partials/head.admin.ejs') %>
 
-  <body class="container">
-    <%- include('partials/header') %>
+  <body>
+    <%- include('../partials/header.admin.ejs') %>
 
-    <h1>Editar Animal</h1>
-    <form action="/animals/edit/<%= animal.id %>" method="POST" enctype="multipart/form-data">
-      <!-- Nombre del Animal -->
-      <div class="form-group">
-        <label for="name">Nombre del Animal</label>
-        <input type="text" class="form-control" id="name" name="name" value="<%= animal.name %>" required>
+      <div class="container">
+        <h1 class="fs-3">Editar Animal</h1>
+        <form action="/animals/update/<%= animal.id %>?_method=PUT" method="POST" class="row" enctype="multipart/form-data">
+          <!-- Imagen -->
+          <div class="form-group mb-3 col-12 col-md-4">
+            <img src="/images/<%= animal.image %>" alt="Imagen del Animal" class="img-fluid" id="image-prev">
+            <input type="file" hidden class="form-control-file" id="image" name="image" accept="image/*" onchange="showPrev(this.files[0])">
+          </div>
+          <div class="col-12 col-md-8">
+            <div class="row">
+              <div class="form-group mb-3 col-12 ">
+                <label for="name">Nombre</label>
+                <input type="text" class="form-control" id="name" name="name" value="<%= animal.name %>" required>
+              </div>
+              <!-- Descripción -->
+              <div class="form-group mb-3 col-12 ">
+                <label for="description">Descripción</label>
+                <textarea class="form-control" id="description" style="resize: none;" name="description" rows="4"
+                  required><%= animal.description %></textarea>
+              </div>
+  
+              <!-- Categoría -->
+              <div class="form-group mb-3 col-12  col-md-6">
+                <label for="specieId">Especie</label>
+                <select class="form-control" id="specieId" name="specieId" required>
+                  <% species.forEach(specie=> { %>
+                    <option value="<%= specie.id %>" <%=animal.specieId==specie.id && 'selected' %> ><%= specie.name %>
+                    </option>
+                    <% }) %>
+                </select>
+              </div>
+  
+              <!-- Tamaño -->
+              <div class="form-group mb-3 col-12 col-md-6 ">
+                <label for="age">Edad</label>
+                <input type="text" class="form-control" id="age" name="age" value="<%= animal.age %>" required>
+              </div>
+  
+              <div class="form-group mb-3 col-12 col-md-6 ">
+                <label for="sex">Sexo</label>
+                <select class="form-control" id="sex" name="sex" required>
+                  <option value="Hembra" <%=animal.sex=='Hembra' && 'selected' %>>Hembra </option>
+                  <option value="Macho" <%=animal.sex=='Macho' && 'selected' %>>Macho </option>
+                </select>
+              </div>
+              <div class="form-group mb-3 col-12 col-md-6">
+                <label for="cityId">Zona</label>
+                <select class="form-control" id="cityId" name="cityId" required>
+                  <% cities.forEach(city=> { %>
+                    <option value="<%= city.id %>" <%=animal.cityId==city.id && 'selected' %> ><%= city.name %> (<%=
+                          city.province %> )</option>
+                    <% }) %>
+                </select>
+              </div>
+              <div class="col-12 mt-3">
+                <div class="d-flex justify-content-end gap-2">
+                  <label class="btn btn-secondary" for="image">Cambiar imagen</label>
+                  <button type="submit" class="btn btn-primary">Actualizar Animal</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
+      <script>
+        function showPrev(file) {
+          let reader = new FileReader();
+          reader.onload = function (e) {
+            document.getElementById("image-prev").src = e.target.result;
+          };
+          reader.readAsDataURL(file);
+        }
+      </script>
 
-      <!-- Descripción -->
-      <div class="form-group">
-        <label for="description">Descripción</label>
-        <textarea class="form-control" id="description" name="description" rows="4" required><%= animal.description %></textarea>
-      </div>
-
-      <!-- Imagen -->
-      <div class="form-group">
-        <label for="image">Imagen</label>
-        <input type="file" class="form-control-file" id="image" name="image" accept="image/*">
-        <small>Deja en blanco si no quieres cambiar la imagen.</small>
-      </div>
-
-      <!-- Categoría -->
-      <div class="form-group">
-        <label for="category">Categoría</label>
-        <select class="form-control" id="category" name="category" required>
-          <option value="perro" <%= animal.category === 'perro' ? 'selected' : '' %>>Perro</option>
-          <option value="gato" <%= animal.category === 'gato' ? 'selected' : '' %>>Gato</option>
-          <option value="zona" <%= animal.category === 'zona' ? 'selected' : '' %>>Zona</option>
-        </select>
-      </div>
-
-      <!-- Tamaño -->
-      <div class="form-group">
-        <label for="size">Tamaño</label>
-        <input type="text" class="form-control" id="size" name="size" value="<%= animal.size %>" required>
-      </div>
-
-      <!-- Botón de Enviar -->
-      <button type="submit" class="btn btn-primary">Actualizar Animal</button>
-    </form>
-
-    <%- include('partials/footer') %>
-
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
+
 </html>
