--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -13,7 +13,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contacto">
+            <a class="nav-link" href="/#contacto">
               <i class="fa-solid fa-paw"></i> Contacto
             </a>
           </li>
