--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -18,11 +18,14 @@
           <div form="formulario">
             <label for="Email">Email:</label>
             <input type="email" name="email" id="email" placeholder="Email">
+            <p style="color: red; margin: 10px 0;"><%= (locals.errors && errors.email) && errors.email.msg %></p>
             <label for="Email">Contraseña:</label>
-            <input class="formulario-input" type="password" name="password" placeholder="Contraseña"><br>
+            <input class="formulario-input" type="password" name="password" placeholder="Contraseña">
+              <p style="color: red; margin: 10px 0;"><%= (locals.errors && errors.password) && errors.password.msg %></p>
           </div>
           <button class="boton-enviar" type="submit">Iniciar sesión</button>
         </form>
+      
       </div>
 
       <div class="olvido-contrasena">
@@ -31,17 +34,6 @@
     </main>
 
     <%- include('../partials/footer') %>
-
-      <!-- Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
