--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -13,20 +13,61 @@
       <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
       <form action="/users/register" method="POST" >
         <div class="registro">
-          <label for="username">Nombre:</label>
-          <input type="text" name="name" placeholder="Ingresa tu nombre"  />
-          <label for="username">Apellido:</label>
-          <input type="text" name="surname" placeholder="Ingresa tu apellido"  />
-          <label for="Email">Correo electronico:</label>
-          <input type="email" name="email" id="email" placeholder="Ingresa tu email" />
+
+          <label for="name">Nombre:</label>
+          <input 
+            type="text" 
+            name="name" 
+            id="name" 
+            placeholder="Ingresa tu nombre"  
+            value="<%= (locals.oldData && oldData.name) && oldData.name %>"
+            />
+            <p style="color: red;"><%= (locals.errors && errors.name) && errors.name.msg %></p>
+
+          <label for="surname">Apellido:</label>
+          <input 
+            type="text" 
+            name="surname" 
+            id="surname" 
+            placeholder="Ingresa tu apellido"  
+            value="<%= (locals.oldData && oldData.surname) && oldData.surname %>"
+            />
+            <p style="color: red;"><%= (locals.errors && errors.surname) && errors.surname.msg %></p>
+
+          <label for="email">Correo electronico:</label>
+          <input 
+            type="email" 
+            name="email" 
+            id="email" 
+            placeholder="Ingresa tu email" 
+            value="<%= (locals.oldData && oldData.email) && oldData.email %>"
+            />
+            <p style="color: red;"><%= (locals.errors && errors.email) && errors.email.msg %></p>
+
           <label for="password">Contraseña:</label>
-          <input type="password" name="password" placeholder="Ingresa tu contraseña"  />
-          <label for="password2">Confirma tu contraseña:</label>
-          <input type="password" name="password2" placeholder="Ingresa tu contraseña"  />
+          <input type="password" name="password" id="password" placeholder="Ingresa tu contraseña"  />
+          <p style="color: red;"><%= (locals.errors && errors.password) && errors.password.msg %></p>
+
+          <label for="confirmPassword">Confirma tu contraseña:</label>
+          <input type="password" name="confirmPassword" placeholder="Ingresa tu contraseña"  />
+          <p style="color: red;"><%= (locals.errors && errors.confirmPassword) && errors.confirmPassword.msg %></p>
+          
           <label for="phone">Teléfono:</label>
-          <input type="number" id="phone" name="phone" placeholder="Ingresa tu teléfono" />
+          <input 
+            type="number" 
+            id="phone" 
+            name="phone" 
+            placeholder="Ingresa tu teléfono" 
+            value="<%= (locals.oldData && oldData.phone) && oldData.phone %>"
+            />
           <label for="Domicilio">Dirección:</label>
-          <input type="text" id="Domicilio" name="address" placeholder="Domicilio" />
+          <input 
+            type="text" 
+            id="Domicilio"
+            name="address" 
+            placeholder="Domicilio" 
+            value="<%= (locals.oldData && oldData.address) && oldData.address %>"
+            />
           <label for="text">Zona</label>
           <select id="text" name="cityId" >
             <option value="" hidden selected>Seleccione...</option>
